cleanup, ensure interface is met, httpsling, resend tests
Signed-off-by: Sarah Funkhouser <147884153+golanglemonade@users.noreply.github.com>

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,6 +12,6 @@ repos:
     hooks:
       - id: yamlfmt
   - repo: https://github.com/crate-ci/typos
-    rev: typos-dict-v0.11.27
+    rev: v1.24.5
     hooks:
       - id: typos
