--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -40,6 +40,6 @@ issues:
   exclude-dirs:
     - .buildkite/*
     - .github/*
-    - docker/*
-    - test/*
+    - providers/mock/*
+    - testdata/*
   exclude-files: []
