--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -1,45 +1,55 @@
+version: "2"
 run:
-  timeout: 10m
   allow-serial-runners: true
-  concurrency: 0
-linters-settings:
-  goimports:
-    local-prefixes: github.com/theopenlane/newman
-  gofumpt:
-    extra-rules: true
-  gosec:
-    exclude-generated: true
-  revive:
-    ignore-generated-header: true
 linters:
   enable:
     - bodyclose
-    - errcheck
+    - err113
     - gocritic
     - gocyclo
-    - err113
-    - gofmt
-    - goimports
-    - mnd
-    - gosimple
-    - govet
     - gosec
-    - ineffassign
     - misspell
+    - mnd
     - noctx
     - revive
     - staticcheck
-    - stylecheck
-    - typecheck
-    - unused
     - whitespace
     - wsl
+  exclusions:
+    generated: lax
+    presets:
+      - comments
+      - common-false-positives
+      - legacy
+      - std-error-handling
+    paths:
+      - .buildkite/*
+      - .github/*
+      - providers/mock/*
+      - testdata/*
+      - third_party$
+      - builtin$
+      - examples$
+      - _test.go$
 issues:
   fix: true
-  exclude-use-default: true
-  exclude-dirs:
-    - .buildkite/*
-    - .github/*
-    - providers/mock/*
-    - testdata/*
-  exclude-files: []
+formatters:
+  enable:
+    - gofmt
+    - goimports
+  settings:
+    gofumpt:
+      extra-rules: true
+    goimports:
+      local-prefixes:
+        - github.com/theopenlane/newman
+  exclusions:
+    generated: lax
+    paths:
+      - .buildkite/*
+      - .github/*
+      - providers/mock/*
+      - testdata/*
+      - third_party$
+      - builtin$
+      - examples$
