--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -9,7 +9,7 @@ tasks:
   go:lint:
     desc: runs golangci-lint, the most annoying opinionated linter ever
     cmds:
-      - golangci-lint run --config=.golangci.yaml --verbose --fast --fix
+      - golangci-lint run --config=.golangci.yaml --verbose --fix
 
   go:test:cover:
     desc: runs and outputs results of created go tests with coverage
